# sqlx

./: .env  Cargo.toml  ON  README.md  sqlite-internal.db  test_amp.json
src/: main.rs  test-multiple-items.json  test.json
src/resources/: internal-schema.sql  sqlite-internal.db
src/sql/: database_setup.rs  entities.rs  error_handling.rs  mod.rs  queries.rs  rm_queries.rs
src/sql/queries/: deletions.rs  insertions.rs  mod.rs  search.rs
