[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "json", "sqlite"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
dotenvy = "0.15.6"
